# kwi-kraken-rest

./: Cargo.toml  LICENSE  README.md
examples/: account_data.rs  funding.rs  market_data.rs  trading.rs
src/: error.rs  lib.rs  request.rs
src/account_data/: account_balance.rs  closed_orders.rs  delete_export_report.rs  extended_balance.rs  get_export_report_status.rs  ledgers_info.rs  mod.rs  open_orders.rs  open_positions.rs  order_amends.rs  orders_info.rs  query_ledgers.rs  request_export_report.rs  retrieve_data_export.rs  trade_balance.rs  trade_volume.rs  trades_history.rs  trades_info.rs
src/earn/: allocate_earn_funds.rs  allocation_status.rs  deallocate_earn_funds.rs  deallocation_status.rs  list_earn_allocations.rs  list_earn_strategies.rs  mod.rs
src/funding/: deposit_addresses.rs  deposit_methods.rs  mod.rs  recent_deposits_status.rs  recent_withdrawals_status.rs  wallet_transfer.rs  withdraw_funds.rs  withdrawal_addresses.rs  withdrawal_cancellation.rs  withdrawal_information.rs  withdrawal_methods.rs
src/market_data/: asset_info.rs  mod.rs  ohlc.rs  order_book.rs  recent_spreads.rs  recent_trades.rs  server_time.rs  system_status.rs  ticker.rs  tradable_asset_pairs.rs
src/subaccounts/: account_transfer.rs  create_subaccount.rs  mod.rs
src/trading/: add_order.rs  add_order_batch.rs  amend_order.rs  cancel_all_orders.rs  cancel_all_orders_after_x.rs  cancel_order.rs  cancel_order_batch.rs  edit_order.rs  mod.rs  token.rs
