[package]
name = "kwi-kraken-rest"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/ishrut/kwi-kraken-rest"
description = "Unofficial kraken trading platform REST API implementation"
license = "MIT"
keywords = ["rest", "kraken", "trading", "api"]
categories = ["api-bindings", "asynchronous" ]
readme = "README.md"

[dependencies]
base64 = "0.22.1"
hmac = "0.12.1"
reqwest = { version = "0.12.12", default-features = false,  features = ["json", "rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sha2 = "0.10.8"

[dev-dependencies]
tokio = {version = "1.43.0", features = ["full"]}
dotenvy = "0.15.7"
